do not output rendered markup if markup language is scss, fixes spacing around code example blocks

--- a/theme/css/theme.css
+++ b/theme/css/theme.css
@@ -313,8 +313,10 @@ h5 + * {
  * @name Markup
  * @level X.X.
  */
-.c-theme-markup__code {
+* + .c-theme-markup__code {
   margin-top: 1.5em; }
+.c-theme-markup__code pre[class*='language-'] {
+  margin: 0; }
 
 /**
  * @name Section
